# verisolv

./: .gitignore  LICENSE  README.md  pyproject.toml
arxiv/src/: 00README.txt  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex
benchmarks/: compare_scipy.py  results.csv
docs/: CONTRACT.md  design.md  math_notes.md
lean/: ODE.lean  README.md  lake-manifest.json  lakefile.toml
lean/ODE/: EulerConvergence.lean
paper/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  make_arxiv.sh  make_convergence_fig.py  refs.bib
python_solver/solver/: __init__.py  ivp.py
python_solver/solver/core_bindings/: __init__.py
python_solver/solver/methods/: __init__.py  adams_bashforth.py  bdf.py  euler.py  rk4.py  rk45.py
python_solver/solver/pde/: __init__.py  heat_1d.py  wave_1d.py
python_solver/solver/utils/: __init__.py  types.py  validation.py
python_solver/tests/: test_ode_accuracy.py  test_pde_basic.py
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: lib.rs
rust_core/src/ode/: mod.rs  rk4.rs  rk45.rs  stiff.rs
rust_core/src/pde/: finite_difference.rs  mod.rs
wasm_solver/: Cargo.toml  README.md
wasm_solver/pkg/: package.json  verisolv_wasm.d.ts  verisolv_wasm.js  verisolv_wasm_bg.wasm  verisolv_wasm_bg.wasm.d.ts
wasm_solver/src/: lib.rs
