[package]
name = "verisolv-wasm"
version = "0.1.0"
edition = "2021"
description = "Browser-native WebAssembly bindings for verisolv ODE kernels."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.16"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
